Test/dafny4/git-issue99.dfy.expect
git-issue99.dfy(6,22): Error: Undeclared top-level type or type parameter: BOGUS_TYPE (did you forget to qualify a name or declare a module import 'opened?')
git-issue99.dfy(6,37): Error: incorrect type of datatype constructor argument (found BOGUS_TYPE, expected T1)
2 resolution/type errors detected in git-issue99.dfy
